--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2"
   },
   "name": "newexpressjs",
   "version": "1.0.0",
   "main": "app.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "morgan": "^1.10.0",
+    "serve-favicon": "^2.5.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
