--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "body-parser": "^1.20.2",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mariadb": "^3.1.1",
+    "sequelize": "^6.30.0"
   },
   "name": "newexpressjs",
   "version": "1.0.0",
